dist/objects/Engagement__c.object
<CustomObject>
    <description>A junction object to allow multiple tutors and pupils to be related to multiple cohorts and vice versa. 

Oscar Mawby @ Impact Box 12/12/19</description>
    <fields>
        <fullName>Absences__c</fullName>
        <description>Counts the number of absences for sessions where register has been completed.

Oscar Mawby @ Impact Box 19/12/19</description>
        <inlineHelpText>Counts the number of absences for sessions where register has been completed.</inlineHelpText>
        <label>Absences</label>
        <summaryFilterItems>
            <field>Attendance__c.AttendedSession__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RegisterCompletedDate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Engagement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcceptRejectEmailSent__c</fullName>
        <description>Populated by workflow</description>
        <inlineHelpText>Once this is populated no further emails will be sent, if you&apos;d like to send another accept/reject email for any reason please remove the value from this field.</inlineHelpText>
        <label>Accept/Reject Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AchievedEXS__c</fullName>
        <description>True if Final SATs Score &gt;= 100

Oscar Mawby @ Impact Box 19/12/19</description>
        <formula>AND( KeyStage__c = 2,  FinalEndScore__c &gt;= 100 )</formula>
        <inlineHelpText>True if Final Score &gt;= 100</inlineHelpText>
        <label>Achieved EXS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AchievedGD__c</fullName>
        <description>If Ending SATs score &gt;= 110

Oscar Mawby @ Impact Box 19/12/19</description>
        <formula>AND( KeyStage__c = 2, FinalEndScore__c &gt;= 110 )</formula>
        <inlineHelpText>True If End score &gt;= 110</inlineHelpText>
        <label>Achieved GD?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActiveTutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated with the Tutor when the Status is active and removed after the end date</description>
        <label>Active Tutor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Current Active Engagements</relationshipLabel>
        <relationshipName>ActiveEngagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlternativeProvision__c</fullName>
        <description>Oscar Mawby @ Impact Box 17/12/19</description>
        <label>Alternative Provision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttendancePerc__c</fullName>
        <description>The % of sessions this engagement has been scheduled to attend and has attended.

Oscar Mawby @ Impact Box 19/12/19</description>
        <formula>Attendances__c

/

( Absences__c + Attendances__c )</formula>
        <inlineHelpText>The % of sessions this engagement has been scheduled to attend and has attended.</inlineHelpText>
        <label>Attendance %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AttendancesReassigned__c</fullName>
        <description>Populated by flow on completion of flow triggered by updating pupils tutor when attendances are scheduled.</description>
        <label>Attendances Reassigned date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendances__c</fullName>
        <description>Counts the number of attendances marked as present for this engagement. 

Oscar Mawby @ Impact Box 19/12/19</description>
        <inlineHelpText>Counts the number of attendances marked as present for this engagement.</inlineHelpText>
        <label>Attendances</label>
        <summaryFilterItems>
            <field>Attendance__c.AttendedSession__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RegisterCompletedDate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pupil</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Engagement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BaselineScore__c</fullName>
        <description>The Mock/Baseline score for this pupil within the Cohort Year and Subject e.g. English Lit, Year 11 = GCSE Mock Grade. 

Oscar Mawby @ Impact Box 13/12/19</description>
        <inlineHelpText>The Mock/Baseline score for this pupil within the Cohort Year and Subject e.g. English Lit, Year 11 = GCSE Mock Grade.</inlineHelpText>
        <label>Baseline/Mock Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borderline__c</fullName>
        <description>True if Mock GCSE Grade ≥3.0 and ≤4.0

Oscar Mawby @ Impact Box 19/12/19</description>
        <formula>AND(

 KeyStage__c = 4,

 BaselineScore__c &gt;= 3,

 BaselineScore__c &lt;= 4)</formula>
        <inlineHelpText>True if Mock GCSE Grade ≥3.0 and ≤4.0</inlineHelpText>
        <label>Borderline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>IF( NOT(ISBLANK(Pupil__c)),

 Pupil__r.Account.BillingCity,

  Tutor__r.Account.BillingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on Tutor or Pupils Account City</inlineHelpText>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CohortStartDate__c</fullName>
        <formula>Cohort__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cohort Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CohortUpload__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Cohort Upload that created this record (via data upload and Cohort Upload flow). 

Oscar Mawby @ Impact Box 17/12/19</description>
        <label>Cohort Upload</label>
        <referenceTo>CohortUpload__c</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ConfirmTutorChange__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box when confirming you wish to permanently update a pupil&apos;s tutor on all future attendance records. Note, this may take up to a couple of minutes to updated.</inlineHelpText>
        <label>Confirm Tutor Change?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <formula>Pupil__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>Returns the Pupil or Tutors name on the contact depending on record type, if record has no tutor or pupil will default to auto-number. 

Oscar Mawby @ Impact Box 13/12/19</description>
        <formula>CASE(  Type__c ,

 &apos;Pupil&apos;,  Pupil__r.FirstName  &amp; &quot; &quot; &amp; LEFT(Pupil__r.LastName,1),

 &apos;Tutor&apos;,  Tutor__r.FirstName &amp; &quot; &quot; &amp; LEFT(Tutor__r.LastName,1),

 Name

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns the Pupil or Tutors name on the contact depending on record type, if record has no tutor or pupil will default to auto-number.</inlineHelpText>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTimeHourlyPayRate__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Contact Time Hourly Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CoverTutor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Engagement record is being created for a single session and you do not want it to be included in summaries. 

Oscar Mawby @ Impact Box 22/01/2020</description>
        <inlineHelpText>To add a Cover Tutor for a Single Session use the &apos;Add Cover Tutor&apos; button on the Session record.</inlineHelpText>
        <label>Cover Tutor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedByCurrentUser__c</fullName>
        <formula>IF( CreatedBy.Id = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentIncompleteRegisters__c</fullName>
        <description>Created by Oscar Mawby @ Impact Box, 12/08/2020. Populated by DLRS, counts the number of Tutor attendances where register is incomplete.</description>
        <label>Current Incomplete Registers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <formula>TEXT( Position__r.DayofWeek__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dosage__c</fullName>
        <description>Total number of hours of tutoring received

Oscar Mawby @ Impact Box 19/12/19</description>
        <inlineHelpText>Total number of hours of tutoring received</inlineHelpText>
        <label>Dosage</label>
        <summarizedField>Attendance__c.SessionLengthhours__c</summarizedField>
        <summaryFilterItems>
            <field>Attendance__c.AttendedSession__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pupil</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RegisterCompletedDate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Engagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EngagementMigrationNumber__c</fullName>
        <description>Built for purposes of data migration, Oscar Mawby @ Impact box 22/01/20</description>
        <label>Engagement Migration Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngagementName__c</fullName>
        <formula>IF(

Type__c = &apos;Pupil&apos;, ContactName__c &amp; &quot;, &quot; &amp;  TEXT(Cohort__r.Subject__c) &amp; &quot;, &quot; &amp;  TEXT(Cohort__r.SchoolYear__c),

  TEXT(Cohort__r.Subject__c) &amp; &quot; &quot; &amp; IF( CoverTutor__c , &quot;Cover &quot;, NULL) &amp; &quot;Tutor: &quot; &amp; ContactName__c

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngagementStatus__c</fullName>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnglishasanAdditionalLanguage__c</fullName>
        <description>Oscar Mawby @ Impact Box 17/12/19</description>
        <label>English as an Additional Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalEndScore__c</fullName>
        <description>The Final/End Score for this pupil within the Cohorts Subject and Year e.g. Year 7, Maths = PuMA/PiRA end

Oscar Mawby @ Impact Box 13/12/19</description>
        <inlineHelpText>The Final/End Grade for this pupil within the Cohorts Subject and Year e.g. Year 7, Maths = PuMA/PiRA end</inlineHelpText>
        <label>Final/End Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreeSchoolMeals__c</fullName>
        <description>Oscar Mawby @ Impact Box 17/12/19</description>
        <label>Free School Meals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <formula>TEXT(Position__r.Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasMultipleTutors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Pupil had multiple tutors pre-migration</description>
        <inlineHelpText>Checked if Pupil had multiple tutors pre-migration</inlineHelpText>
        <label>Has Multiple Tutors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMyEngagement__c</fullName>
        <formula>$User.Id =  Tutor__r.CommunityUser__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMyPosition__c</fullName>
        <description>If current user owns related position, created for a list view</description>
        <formula>$User.Id = Position__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS1Group__c</fullName>
        <description>Oscar Mawby @ Impact Box 18/12/2019</description>
        <formula>IF(   
   AND( KeyStage__c = 2,  KS1Score__c &lt; 96), &apos;LOW&apos;,

   IF( 
      AND( KeyStage__c = 2,  KS1Score__c &gt;= 96,KS2Score__c &lt;= 106), &apos;MEDIUM&apos;,

      IF( 
         AND( KeyStage__c = 2,  KS1Score__c &gt;= 107), &apos;HIGH&apos;, NULL)

     )
)</formula>
        <inlineHelpText>Returns the KS1 Group if engagement is in KS2, based on the KS1 Score</inlineHelpText>
        <label>KS1 Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS1Score__c</fullName>
        <description>Oscar Mawby @ Impact Box 18/12/19</description>
        <label>KS1 Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS2Group__c</fullName>
        <description>Returns the KS2 Group if engagement is in KS4 or KS3, based on key stage 2 score. 

Oscar Mawby @ Impact Box 18/12/19</description>
        <formula>IF(   
   
AND(KeyStage__c = 4,  KS2Score__c &lt; 4), &apos;LOW&apos;,

IF(AND(KeyStage__c = 4,  KS2Score__c &gt;= 4,KS2Score__c &lt; 5), &apos;MEDIUM&apos;,

IF(AND(KeyStage__c = 4,  KS2Score__c &gt;= 5), &apos;HIGH&apos;,

IF(AND(KeyStage__c = 3,  KS2Score__c &lt; 96), &apos;LOW&apos;,

IF(AND(KeyStage__c = 3,  KS2Score__c &gt;= 96, KS2Score__c &lt;= 106), &apos;MEDIUM&apos;,

IF(AND(KeyStage__c = 3,  KS2Score__c &gt;= 107), &apos;HIGH&apos;,

&apos;No Group&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns the KS2 Group if engagement is in KS4 or KS3, based on key stage 2 score.</inlineHelpText>
        <label>KS2 Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS2Score__c</fullName>
        <label>KS2 Score</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeyStage__c</fullName>
        <formula>CASE( SchoolYear__c, 

     &apos;5&apos;,2,
     &apos;6&apos;,2,
     &apos;7&apos;,3,
     &apos;8&apos;,3,
     &apos;9&apos;,3,
     &apos;10&apos;,4,
     &apos;11&apos;,4,
0)</formula>
        <label>Key Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks a record as Migrated from legacy systems. Oscar Mawby @ Impact box 22/01/20</description>
        <label>Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LookedAfterChild__c</fullName>
        <description>Oscar Mawby @ Impact Box 17/12/19</description>
        <label>Looked After Child</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxSessionDate__c</fullName>
        <description>Session date furthest in the future

Oscar Mawby</description>
        <label>Max Session Date</label>
        <summarizedField>Attendance__c.SessionDateDate__c</summarizedField>
        <summaryForeignKey>Attendance__c.Engagement__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NonContactHourlyPayRate__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Non-Contact Hourly Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonContactTimePerSessionhours__c</fullName>
        <label>Non-Contact Time Per Session (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofPupils__c</fullName>
        <inlineHelpText>The number of Pupils this Tutor engagement is the Tutor for</inlineHelpText>
        <label>Number of Pupils</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PositionEndDate__c</fullName>
        <description>For use in an email merge field, created by Oscar @ Impact Box 24/06/2020</description>
        <formula>Position__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PositionStartDate__c</fullName>
        <description>Created for a list view</description>
        <formula>Position__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PositionStartTime__c</fullName>
        <description>For use in an email merge field, created by Oscar @ Impact Box 24/06/2020</description>
        <formula>Position__r.StartTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostPVEnjoyedTuition__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Post PV: Enjoyed Tuition</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostPVHelpedToImprove__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Post PV: Helped To Improve</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrePVAbilityPerception__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Pre PV: Ability Perception</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrePVAskingForHelp__c</fullName>
        <label>Pre PV: Asking For Help</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrePVEnjoyment__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Pre PV: Enjoyment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrePVResilience__c</fullName>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Pre PV: Resilience</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgressMade__c</fullName>
        <description>Final Score - Baseline Score

Oscar Mawby @ Impact Box, 19/12/19</description>
        <formula>IF( ISBLANK(FinalEndScore__c), NULL,

FinalEndScore__c - BaselineScore__c)</formula>
        <inlineHelpText>Final Score - Baseline Score</inlineHelpText>
        <label>Progress Made</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PupilPremium__c</fullName>
        <description>Oscar Mawby @ Impact Box 17/12/19</description>
        <label>Pupil Premium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pupil__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Oscar Mawby @ Impact Box 12/12/19</description>
        <label>Pupil</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Pupil</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pupil Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PupilsTutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will show a list of Tutors that have engagements within this cohort, if you cannot find your desired Tutor you may need to create an Engagement for them within this Cohort.</inlineHelpText>
        <label>Pupil&apos;s Tutor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Engagement__c.Cohort__c</field>
                <operation>equals</operation>
                <valueField>$Source.Cohort__c</valueField>
            </filterItems>
            <filterItems>
                <field>Engagement__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Tutor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Pupils</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegisterName__c</fullName>
        <formula>IF( ISBLANK(Tutor__c),

Pupil__r.FirstName &amp;&quot; &quot;&amp; Pupil__r.LastName,

&quot;Tutor: &quot;&amp;Tutor__r.FirstName &amp;&quot; &quot;&amp; Tutor__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Register Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEND__c</fullName>
        <description>Oscar Mawby @ Impact Box 17/12/19</description>
        <label>SEND</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YNU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SchoolAttendance__c</fullName>
        <inlineHelpText>The attendance % of pupil at school at time of upload</inlineHelpText>
        <label>School Attendance</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SchoolName__c</fullName>
        <description>For use in an email merge field, created by Oscar @ Impact Box 24/06/2020</description>
        <formula>Cohort__r.SchoolName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolYear__c</fullName>
        <description>Oscar Mawby @ Impact Box 18/12/19</description>
        <label>School Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>For use in an email merge field, created by Oscar @ Impact Box 24/06/2020</description>
        <formula>TEXT(Cohort__r.Subject__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuccessAchieved__c</fullName>
        <description>True if Final Score is is greater or equal to Target Score

Oscar Mawby @ Impact Box 19/12/19</description>
        <formula>FinalEndScore__c &gt;=  Target_Score__c</formula>
        <inlineHelpText>True if Final Score is is greater or equal to Target Score</inlineHelpText>
        <label>Success Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TargetGroup__c</fullName>
        <description>Returns the Target Group for KS2 Engagements

Oscar Mawby @ Impact Box 18/12/19</description>
        <formula>IF(  

   AND(KeyStage__c = 2,  BaselineScore__c &lt; 90), 1,

IF( 

   AND(KeyStage__c = 2,  BaselineScore__c &gt;= 90, BaselineScore__c &lt; 100), 2,

IF(

   AND(KeyStage__c = 2,  BaselineScore__c &gt;= 100, BaselineScore__c &lt; 106), 3,

IF(

   AND(KeyStage__c = 2, BaselineScore__c &gt; 106), 4,

NULL))))</formula>
        <inlineHelpText>Returns the Target Group for KS2 Engagements</inlineHelpText>
        <label>Target Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetPopulation__c</fullName>
        <description>Oscar Mawby @ Impact Box 17/12/19</description>
        <formula>IF(

  OR(
      ISPICKVAL( PupilPremium__c , &apos;Yes&apos;),
      ISPICKVAL( LookedAfterChild__c , &apos;Yes&apos;),
      ISPICKVAL( AlternativeProvision__c , &apos;Yes&apos;)
    ),
     

TRUE,

FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if child is in receipt of pupil premium (PP), a looked after child (LAC), or in alternative provision (AP).</inlineHelpText>
        <label>Target Population</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Score__c</fullName>
        <description>Calculates engagements target score based on key stage, target group and their baseline score. Calculated by field update due to compiled chr limit on formula. 

Oscar Mawby @ Impact Box 19/12/19</description>
        <inlineHelpText>Calculates engagements target score based on key stage, target group and their baseline score.</inlineHelpText>
        <label>Target Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times__c</fullName>
        <formula>TEXT( Position__r.StartTime__c )&amp;&quot; - &quot;&amp;TEXT( Position__r.EndTime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Times</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TutorApplicationNote__c</fullName>
        <inlineHelpText>Note Tutor provided on applying for the position</inlineHelpText>
        <label>Tutor Application Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TutorEmail__c</fullName>
        <description>No Longer Used, updated by Oscar Mawby @ Impact Box, August 26th 2020 in order to allow for other formula fields. 

Original: CASE(Type__c,

&apos;Tutor&apos;, Tutor__r.Email,

&apos;Pupil&apos;,  PupilsTutor__r.Tutor__r.Email,

&apos;Jenny.Muter@thetutortrust.org&apos;)</description>
        <formula>&apos;Jenny.Muter@thetutortrust.org&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzTutor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TutorFullName__c</fullName>
        <formula>Tutor__r.FirstName &amp; &quot; &quot; &amp;  Tutor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tutor Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Tutor this engagement record belongs

Oscar Mawby @ Impact Box 12/12/19</description>
        <inlineHelpText>The Tutor the engagement record belongs to</inlineHelpText>
        <label>Tutor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Tutor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engagements (Tutor)</relationshipLabel>
        <relationshipName>TutorEngagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TutoringHours__c</fullName>
        <inlineHelpText>Total hours tutor has tutored</inlineHelpText>
        <label>Tutoring Hours</label>
        <summarizedField>Attendance__c.SessionLengthhours__c</summarizedField>
        <summaryFilterItems>
            <field>Attendance__c.AttendedSession__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.RegisterCompletedDate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Engagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TutorsName__c</fullName>
        <description>Used to populate &apos;Selected Tutors&apos; in session creation flow</description>
        <formula>IF( 

Type__c = &apos;Tutor&apos;,

Tutor__r.FirstName &amp; &quot; &quot; &amp;  LEFT(Tutor__r.LastName,1),

PupilsTutor__r.ContactName__c 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tutors Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to group pupil record types into single category</description>
        <formula>CASE( RecordType.DeveloperName,

&apos;KS2_Pupil&apos;, &apos;Pupil&apos;,
&apos;KS3_Pupil&apos;, &apos;Pupil&apos;,
&apos;KS4_Pupil&apos;, &apos;Pupil&apos;,
&apos;Pupil&apos;, &apos;Pupil&apos;,
&apos;Tutor&apos;, &apos;Tutor&apos;,
&apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emailSchoolAddress__c</fullName>
        <description>For use in an email merge field, created by Oscar @ Impact Box 24/06/2020</description>
        <formula>Cohort__r.Opportunity__r.School__r.BillingStreet &amp; &quot;, &quot; &amp;  Cohort__r.Opportunity__r.School__r.BillingCity &amp; &quot;, &quot; &amp;  Cohort__r.Opportunity__r.School__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>emailSchoolAddress</label>
        <type>Text</type>
    </fields>
    <label>Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Pupil__c</columns>
        <columns>Tutor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Attendances__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.KS2_Pupil</value>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>